--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -73,14 +73,17 @@ This document explicitly does not update the other documents referenced in {{RFC
 
 Section 3 of {{RFC7990}} defines the canonical format as:
 
+{:quote}
 > Canonical format: the authorized, recognized, accepted, and archived version of the document
 
 This paragraph in {{RFC7990}} is replaced with:
 
+{:quote}
 > Definitive version: the authorized, recognized, accepted, and most recent version of the document published by the RFC Editor
 
 Section 5 of {{RFC7990}} says:
 
+{:quote}
 > The final XML file produced by the RFC Editor will be considered the canonical format for RFCs; it is the lowest common denominator that holds all the information intended for an RFC.
 
 This wording does not take into account later changes to the definitive version. 
@@ -94,13 +97,16 @@ Publication formats and the contexts in which they are displayed can optionally 
 
 In order to allow the RFC Editor to publish new definitive versions and associated publication versions of RFCs, Section 5 of {{RFC7990}} is replaced with:
 
+{:quote}
 > The definitive version produced by the RFC Editor is the version that holds all the information intended for an RFC.
 The RFC Editor may change the definitive version of an RFC over time to incorporate changes in the RFCXML format.
 
+{:quote}
 > The RFC Editor will keep archived set of all definitive versions of RFCs as well as archived sets of the publication versions for an RFC that were published.
 These archived sets must be available using the same access methods as for the XML and the published publication formats.
 Every archived set shall record the date that a document was created or revised.
 
+{:quote}
 > This document does not specify how archives are maintained or how archived RFC might be located or identified.
 
 \[\[\[
