--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -43,11 +43,11 @@ informative:
 
 --- abstract
 
-In order to improve the readability of RFCs while supporting their archivability, the definitive version of the RFC Series has transitioned from plain-text ASCII to XML using the RFCXML vocabulary; different publication versions are rendered from that base document.
-These changes caused an increase in complexity for authors and the publisher of RFCs.
+In order to improve the readability of RFCs while supporting their archivability, the definitive version of the RFC Series transitioned from plain-text ASCII to XML using the RFCXML vocabulary; different publication versions are rendered from that base document.
 This document is the framework that provides the problem statement, lays out a road map of the documents that capture the specific requirements, and describes how RFCs are published.
 
-This document updates RFC 7990 in many ways. Some of the significant updates are changing the word "canonical" to "definitive" and defining what it means to the series; defining the relationship of the publication versions to the series; defining a policy governing how published RFCs can be updated while keeping the same RFC number; and specifying expectations around archiving and updating the definitive and publication versions of RFCs.
+This document obsoletes RFC 7990 and makes many significant changes to that document.
+It also updates the stability policy in RFC 9280.
 
 This draft is part of the RFC Series Working Group (RSWG); see <https://datatracker.ietf.org/edwg/rswg/documents/>.
 There is a repository for this draft at <https://github.com/paulehoffman/draft-rswg-rfc7990-updates>.
@@ -58,7 +58,7 @@ Issues can be raised there, but probably should be on the mailing list instead.
 
 # Introduction
 
-"RFC Series Format Requirements and Future Development" {{RFC6949}} discusses the need to improve the display of items such as author names and artwork in RFCs as well as the need to improve the ability of RFCs to be displayed properly on various devices.
+"RFC Series Format Requirements and Future Development" {{RFC6949}} discussed the need to improve the display of items such as author names and artwork in RFCs as well as the need to improve the ability of RFCs to be displayed properly on various devices.
 Based on the discussions with communities of interest, such as the IETF, the RFC Series Editor decided to explore a change to the format of the Series.
 This document serves as the framework that describes the problems that were solved and summarizes the documents created to date that capture the specific requirements for each aspect of the change in format.
 
@@ -70,18 +70,14 @@ The details described in this document are expected to change based on experienc
 Revised documents will be published capturing those changes as the toolsets are completed.
 Other implementers must not expect those changes to remain backwards compatible with the details described in this document.
 
-
-## Changes to RFC 7990
+## Changes to RFC 7990 and RFC 9280
 
 {{RFC7990}} defined a framework for how RFCs would be published after that document was published, including new formats and a new "canonical format" for archiving RFCs.
 It talked about "the XML file" as if there will only be one XML file for an RFC because this was the expectation at the time {{RFC7990}} was published.
 It also talked about "publication formats" as the versions of HTML, text, and PDF versions derived from the definitive version.
 
-The first RFC to be published using the group of RFCs described in {{RFC7990}} was {{RFC8651}}, published in October 2019.
-In the time since then, all published RFCs have followed the general plan from {{RFC7990}}.
-
 After extensive experience with publishing RFCs in the RFCXML format (defined in {{RFC7991}}, it has been decided that an RFC's XML file can be updated for narrowly limited purposes.
-This document updates {{RFC7990}} in significant ways:
+This document changes {{RFC7990}} in significant ways:
 
 - It changes the phrase "canonical format" to "definitive version" and defines the use of the definitive version in the series.
 - It changes the phrase "publication format" to "publication versions" and defines the use of the publication versions in the series.
@@ -92,44 +88,32 @@ This document updates {{RFC7990}} in significant ways:
 
 Historical text from {{RFC7990}} such as Section 2 ("Problem Statement"), Section 4 ("Overview of the Decision-Making Process"), and Section 10 ("Transition Plan") are not copied to this document.
 
-# Terminology
+Section 7.6 of "RFC Editor Model (Version 3)" {{RFC9280}} says "Once published, RFC Series documents are not changed."
+{{updating}} and {{pub-versions}} in this document update that policy.
 
-This document uses terminology from RFC 6949, repeated below for convenience.
+## Key Changes from the Earlier RFC Process
 
-ASCII:
-: Coded Character Set - 7-bit American Standard Code forInformation Interchange, ANSI X3.4-1986 {{RFC20}}
+The first RFC to be published using the group of RFCs described in {{RFC7990}} was {{RFC8651}}, published in October 2019.
+In the time since then, all published RFCs have followed the general plan from {{RFC7990}}.
 
-Definitive version:
-: the authorized, recognized, accepted, and most recent version of the document published by the RFC Editor
-
-Metadata:
-: information associated with a document so as to provide, for example, definitions of its structure, or of elements within the document such as its topic or author
-
-Publication version:
-: display and distribution format as it may be read or printed after the publication process has completed
-
-
-# Key Changes from the Earlier RFC Process
-
-At the highest level, the changes that {{RFC7990}} made to the RFC format involve breaking away from solely ASCII plain text and moving to a definitive version that includes all the information required for rendering a document into a wide variety of publication versions.
+At the highest level, the changes that {{RFC7990}} made to the RFC format involved breaking away from solely ASCII ({{RFC20}}) plain text and moving to a definitive version that includes all the information required for rendering a document into a wide variety of publication versions.
 The RFC Editor became responsible for more than just the plain-text file and the PDF-from-text format created at time of publication; the RFC Editor now creates several different formats in order to meet the diverse requirements of the community.
 
 The final XML file produced by the RFC Editor is the definitive version for RFCs; it is the lowest common denominator that holds all the information intended for an RFC.
-PDF/A-3 is the publication version offered in response to subpoenas for RFCs published through this new process and will be developed with an eye towards long-term archival storage.
-HTML is the focus of providing the most flexible set of features for an RFC, including JavaScript to provide pointers to errata and other metadata.
-Plain text will continue to be offered in order to support existing tool chains, where practicable, and the individuals who prefer to read RFCs in this format.
+Additonal publication formats (HTML, PDF, and plain text) are also published by the RFC Editor.
+The publication formats are described in {{pub-versions}} and fully specified in other RFCs.
 
 
-# Definitive Versions
+# Definitive Version of an RFC
 
 The definitive version produced by the RFC Editor is the version that holds all the information intended for an RFC.
-The RFC Editor may change the definitive version of an RFC over time to incorporate changes in the RFCXML format.
+The RFC Editor may change the definitive version of an RFC over time, as described in {{updating}}.
 See {{RFC7991}} for the complete description of the XMLRFC syntax and semantics.
 
 The XML may contain SVG line art, as described in {{RFC7996}}.
 That SVG will also appear in the HTML and PDF publication versions.
 
-The XML may contain non-ASCII charaters, as described in {{RFC7997}}.
+The XML may contain non-ASCII characters, as described in {{RFC7997}}.
 These characters will appear in all the publication versions.
 
 The XML file will not contain any XMLRFC vocabulary elements or attributes that have been marked deprecated.
@@ -142,15 +126,12 @@ For instance, all features that reference externally defined input are expanded.
 It does not contain src attributes for &lt;artwork> or &lt;sourcecode> elements.
 It  does not contain comments or processing instructions.
 
-
-# Updating the Definitive Version of an RFC
+## Updating the Definitive Version of an RFC {#updating}
 
 Historically, the published version of an RFC has been immutable.
-{{Section 7.6 of RFC9280}} says "Once published, RFC Series documents are not changed."
-
 This document defines a new policy that the RFC Editor is permitted to re-issue an RFC for changes that do not affect the semantics of the RFC.
 Reasons for such a change include (but are not limited to) updates to the RFCXML schema, errors discovered in the XML, and changes to the tooling used to generate the publication versions of the definitive XML version of the RFC.
-This policy explicitly updates the stability policy from {{RFC9280}}.
+This policy explicitly updates the stability policy from {{RFC9280}} for the definitive version.
 
 ## Expected Updates to XMLRFC
 
@@ -162,7 +143,7 @@ This policy does not require that updates to RFCXML avoid all risk of introducin
 Instead, it only requires that the RSWG carefully consider the potential for semantic changes, take steps to understand the risk of a semantic change (either deliberate or inadvertent), and to limit those risks.
 
 
-# Publication Versions
+# Publication Versions {#pub-versions}
 
 Publication version files may be republished as needed.
 XML format errors, and better design choices, have been discovered by the community since the first RFCs were published using the RFCXML format.
@@ -173,7 +154,7 @@ Publication versions and the contexts in which they are displayed can optionally
 
 This document defines a new policy that the RFC Editor is permitted to re-issue publication versions of an RFC.
 This can happen if the definitive version is updated, but can also happen due to other changes, such as updates to the RFC Editor's tooling. 
-This policy explicitly updates the stability policy from {{RFC9280}}.
+This policy explicitly updates the stability policy from {{RFC9280}} for publication versions.
 
 ## HTML
 
@@ -182,14 +163,21 @@ The HTML file is rendered from the XML file; it is not derived from the plain-te
 The body of the document uses a subset of HTML.
 
 The documents include Cascading Style Sheets (CSS) for default visual presentation; the CSS can be overwritten by a local CSS file.
-THe allowed CSS is described in {{RFC7993}}.
+The allowed CSS is described in {{RFC7993}}.
 
 JavaScript in the HTML publication version is supported on a limited basis.
 It is not be permitted to overwrite or change any text present in the rendered HTML.
 It may, on a limited basis, add text that provides post-publication metadata or pointers, if warranted. 
 All such text is clearly marked as additional.
+\[\[
+In the HTML format currently used by the RFC Edito, the text from the Javascript is not clearly marked as additional.
+\]\]
 
 ## PDF
+
+\[\[
+The RSWG recently discussed making simplifying changes to RFC 7995, which would also cause this section to change.
+\]\]
 
 {{RFC7995}} describes the tags and profiles that are used to create the new PDF format, including both the internal structure and the visible layout of the file.
 A review of the different versions of PDF is offered, with a recommendation of what PDF standard should apply to RFCs.
@@ -225,6 +213,8 @@ When the RFC Editor archives documents, it does so in a manner that allows them 
 This document does not specify how archives are maintained or how archived RFC XML might be located or identified.
 The methods for storage and access will be determined by the RFC Editor in consultation with the technical community.
 
+{{archive-advice}} gives some non-normative advice created by the RSWG.
+
 
 # IANA Considerations
 
@@ -257,7 +247,8 @@ gave significant input on the early drafts of this document.
 
 --- back
 
-# Advice on Regenerating Publication Formats
+
+# Advice on Regenerating Publication Formats {#archive-advice}
 
 This document does not include specific guidance regarding the generation of publication formats from the RFCXML source for the definitive version of an RFC.
 Decisions about how to maintain publication formats are not a matter governed by policy as specified in {{RFC9280}}.
