--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -85,6 +85,7 @@ This document changes {{RFC7990}} in significant ways:
 - It defines a policy governing how the RFCXML format changes.
 - It defines a policy for when the definitive version of an RFC can be updated and older versions archived.
 - It defines a policy for when the publication versions of an RFC can be updated and older versions archived.
+- It changes the name of the body that publishes RFCs from "RFC Editor" to "RPC", based on {{RFC9280}}
 
 Historical text from {{RFC7990}} such as Section 2 ("Problem Statement"), Section 4 ("Overview of the Decision-Making Process"), and Section 10 ("Transition Plan") are not copied to this document.
 
@@ -97,17 +98,17 @@ The first RFC to be published using the group of RFCs described in {{RFC7990}} w
 In the time since then, all published RFCs have followed the general plan from {{RFC7990}}.
 
 At the highest level, the changes that {{RFC7990}} made to the RFC format involved breaking away from solely ASCII ({{RFC20}}) plain text and moving to a definitive version that includes all the information required for rendering a document into a wide variety of publication versions.
-The RFC Editor became responsible for more than just the plain-text file and the PDF-from-text format created at time of publication; the RFC Editor now creates several different formats in order to meet the diverse requirements of the community.
+The RPC became responsible for more than just the plain-text file and the PDF-from-text format created at time of publication; the RPC now creates several different formats in order to meet the diverse requirements of the community.
 
-The final XML file produced by the RFC Editor is the definitive version for RFCs; it is the lowest common denominator that holds all the information intended for an RFC.
-Additonal publication formats (HTML, PDF, and plain text) are also published by the RFC Editor.
+The final XML file produced by the RPC is the definitive version for RFCs; it is the lowest common denominator that holds all the information intended for an RFC.
+Additonal publication formats (HTML, PDF, and plain text) are also published by the RPC.
 The publication formats are described in {{pub-versions}} and fully specified in other RFCs.
 
 
 # Definitive Version of an RFC
 
-The definitive version produced by the RFC Editor is the version that holds all the information intended for an RFC.
-The RFC Editor may change the definitive version of an RFC over time, as described in {{updating}}.
+The definitive version produced by the RPC is the version that holds all the information intended for an RFC.
+The RPC may change the definitive version of an RFC over time, as described in {{updating}}.
 See {{RFC7991}} for the complete description of the XMLRFC syntax and semantics.
 
 The XML may contain SVG line art, as described in {{RFC7996}}.
@@ -129,7 +130,7 @@ It  does not contain comments or processing instructions.
 ## Updating the Definitive Version of an RFC {#updating}
 
 Historically, the published version of an RFC has been immutable.
-This document defines a new policy that the RFC Editor is permitted to re-issue an RFC for changes that do not affect the semantics of the RFC.
+This document defines a new policy that the RPC is permitted to re-issue an RFC for changes that do not affect the semantics of the RFC.
 Reasons for such a change include (but are not limited to) updates to the RFCXML schema, errors discovered in the XML, and changes to the tooling used to generate the publication versions of the definitive XML version of the RFC.
 This policy explicitly updates the stability policy from {{RFC9280}} for the definitive version.
 
@@ -152,13 +153,13 @@ Similarly, as production tools change, publication versions can be regenerated t
 
 Publication versions and the contexts in which they are displayed can optionally provide additional details of the specific RFCXML version that they were generated from, or provide a means to discover alternative renderings.
 
-This document defines a new policy that the RFC Editor is permitted to re-issue publication versions of an RFC.
-This can happen if the definitive version is updated, but can also happen due to other changes, such as updates to the RFC Editor's tooling. 
+This document defines a new policy that the RPC is permitted to re-issue publication versions of an RFC.
+This can happen if the definitive version is updated, but can also happen due to other changes, such as updates to the RPC's tooling. 
 This policy explicitly updates the stability policy from {{RFC9280}} for publication versions.
 
 ## HTML
 
-{{RFC7992}} describes the semantic HTML produced by the RFC Editor from the XMLRFC files.
+{{RFC7992}} describes the semantic HTML produced by the RPC from the XMLRFC files.
 The HTML file is rendered from the XML file; it is not derived from the plain-text publication version.
 The body of the document uses a subset of HTML.
 
@@ -204,14 +205,14 @@ Authors may choose to have pointers to line art in other publication versions in
 
 # Archived Documents
 
-The RFC Editor will keep archived set of all definitive versions of RFCs as well as archived sets of the publication versions for an RFC that were published.
+The RPC will keep archived set of all definitive versions of RFCs as well as archived sets of the publication versions for an RFC that were published.
 These archived sets must be available using the same access methods as for the XML and the published publication versions.
 Every archived set shall record the date that a document was created or revised.
 
-When the RFC Editor archives documents, it does so in a manner that allows them to be found by people who want the historical (as compared to current) versions of those files.
+When the RPC archives documents, it does so in a manner that allows them to be found by people who want the historical (as compared to current) versions of those files.
 
 This document does not specify how archives are maintained or how archived RFC XML might be located or identified.
-The methods for storage and access will be determined by the RFC Editor in consultation with the technical community.
+The methods for storage and access will be determined by the RPC in consultation with the technical community.
 
 {{archive-advice}} gives some non-normative advice created by the RSWG.
 
